discussion/kv_engine/142736/142736_rev32_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-39620: Remove interfaces from memcached.json [3/3]

This patch removes the old definition of interfaces through
memcached.json

Change-Id: If56d95b7ea8ee6086c6c4d80c3aea536a4a7fc9a

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2021-06-09 17:31:16.000000000
Message: 
Uploaded patch set 32.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-06-09 18:29:49.000000000
Message: 
Patch Set 32: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9695/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/folly.exploded/include/folly/portability/GTest.h:32:10: error: "gtest/gtest.h" file not found [clang-diagnostic-error]
#include <gtest/gtest.h>
         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9695/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/folly.exploded/include/folly/portability/GTest.h:32:10:
error: "gtest/gtest.h" file not found [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9695/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/11689/ : FAILURE

Failure of GoogleTest "TransportProtocols/SaslTest.IncorrectSCRAM_SHA1/Mcbp":

<pre>
[ RUN      ] TransportProtocols/SaslTest.IncorrectSCRAM_SHA1/Mcbp
[2021-06-09T18:26:03.322Z] [       OK ] TransportProtocols/SaslTest.IncorrectSCRAM_SHA1/Mcbp (328 ms)
[2021-06-09T18:26:03.322Z] [ RUN      ] TransportProtocols/SaslTest.IncorrectSCRAM_SHA1/McbpSsl
[2021-06-09T18:26:03.322Z] /home/couchbase/jenkins/workspace/kv_engine.threadsanitizer_master/kv_engine/tests/testapp/testapp_sasl.cc:58: Failure
[2021-06-09T18:26:03.322Z] Expected: connection.deleteBucket(bucket3) doesn"t throw an exception.
[2021-06-09T18:26:03.322Z]   Actual: it throws.
[2021-06-09T18:26:03.322Z] [  FAILED  ] TransportProtocols/SaslTest.IncorrectSCRAM_SHA1/McbpSsl, where GetParam() = McbpSsl (20275 ms)
TransportProtocols/SaslTest.IncorrectSCRAM_SHA1/Mcbp
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/11689/ )

ThreadSanitizer issue: signal-unsafe call inside of a signal (/opt/gcc-10.2.0/lib64/libtsan.so.0+0x87c5c) in operator new(unsigned long)  ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/11689/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/8291/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/36657/ : SUCCESS

http://cv.jenkins.couchbase.com/job/ming-test2/230/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/31329/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/10343/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/19274/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/11270/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/11418/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
